CHATS_SIT/force-app/main/default/objects/Canned_Report__mdt.object
<CustomObject>
<fields>
        <fullName>isProviderDependentLkUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProviderDependentLkUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Date Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOneYearReport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is One Year Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDateRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EndDateRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_Label__c</fullName>
        <label>End Date Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_County__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide County?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide End Date?</label>
        <type>Checkbox</type>
    </fields>    
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Financial</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Provider</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>State Monitoring</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SYS</fullName>
                    <default>true</default>
                    <label>System Generated</label>
                </value>
                <value>
                    <fullName>MAN</fullName>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Label__c</fullName>
        <label>Start Date Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDateDefaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDateDefaulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDateRange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDateRange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMonthYearFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMonthYearFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMonthYear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMonthYear</label>
        <type>Checkbox</type>
    </fields> 
<fields>
        <fullName>County_Label__c</fullName>
        <label>County Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FutureBeginDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FutureBeginDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FutureEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FutureEndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oneMonthDiffCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oneMonthDiffCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCountyAutoAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, user&apos;s primary assigned County will be auto selected</description>
        <label>isCountyAutoAssigned</label>
        <type>Checkbox</type>
    </fields>
    <label>Canned Report</label>
    <pluralLabel>Canned Reports</pluralLabel>
</CustomObject>